qt/gen_qtableview.h

class QAbstractItemModel;
class QHeaderView;
class QItemSelectionModel;
class QMetaObject;
class QModelIndex;
class QPoint;
class QRect;
class QTableView;
class QWidget;
typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QEvent QEvent;
typedef struct QHeaderView QHeaderView;
typedef struct QHideEvent QHideEvent;
typedef struct QItemSelectionModel QItemSelectionModel;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QModelIndex QModelIndex;
typedef struct QMoveEvent QMoveEvent;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QShowEvent QShowEvent;
typedef struct QTableView QTableView;
typedef struct QTabletEvent QTabletEvent;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
bool QTableView_override_virtual_setupViewport(void* self, intptr_t slot);
bool QTableView_override_virtual_wheelEvent(void* self, intptr_t slot);
void QTableView_virtualbase_wheelEvent(void* self, QWheelEvent* param1);
bool QTableView_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QTableView_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* param1);
bool QTableView_override_virtual_changeEvent(void* self, intptr_t slot);
void QTableView_virtualbase_changeEvent(void* self, QEvent* param1);
bool QTableView_override_virtual_devType(void* self, intptr_t slot);
int QTableView_virtualbase_devType(const void* self);
bool QTableView_override_virtual_setVisible(void* self, intptr_t slot);
void QTableView_virtualbase_setVisible(void* self, bool visible);
bool QTableView_override_virtual_heightForWidth(void* self, intptr_t slot);
int QTableView_virtualbase_heightForWidth(const void* self, int param1);
bool QTableView_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QTableView_virtualbase_hasHeightForWidth(const void* self);
bool QTableView_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QTableView_virtualbase_paintEngine(const void* self);
bool QTableView_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QTableView_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QTableView_override_virtual_enterEvent(void* self, intptr_t slot);
void QTableView_virtualbase_enterEvent(void* self, QEvent* event);
bool QTableView_override_virtual_leaveEvent(void* self, intptr_t slot);
void QTableView_virtualbase_leaveEvent(void* self, QEvent* event);
bool QTableView_override_virtual_moveEvent(void* self, intptr_t slot);
void QTableView_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QTableView_override_virtual_closeEvent(void* self, intptr_t slot);
void QTableView_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QTableView_override_virtual_tabletEvent(void* self, intptr_t slot);
void QTableView_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QTableView_override_virtual_actionEvent(void* self, intptr_t slot);
void QTableView_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QTableView_override_virtual_showEvent(void* self, intptr_t slot);
void QTableView_virtualbase_showEvent(void* self, QShowEvent* event);
bool QTableView_override_virtual_hideEvent(void* self, intptr_t slot);
void QTableView_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QTableView_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QTableView_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, long* result);
bool QTableView_override_virtual_metric(void* self, intptr_t slot);
int QTableView_virtualbase_metric(const void* self, int param1);
bool QTableView_override_virtual_initPainter(void* self, intptr_t slot);
void QTableView_virtualbase_initPainter(const void* self, QPainter* painter);
bool QTableView_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QTableView_virtualbase_redirected(const void* self, QPoint* offset);
bool QTableView_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QTableView_virtualbase_sharedPainter(const void* self);
bool QTableView_override_virtual_childEvent(void* self, intptr_t slot);
void QTableView_virtualbase_childEvent(void* self, QChildEvent* event);
bool QTableView_override_virtual_customEvent(void* self, intptr_t slot);
void QTableView_virtualbase_customEvent(void* self, QEvent* event);
bool QTableView_override_virtual_connectNotify(void* self, intptr_t slot);
void QTableView_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QTableView_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QTableView_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QTableView_staticMetaObject();
void QTableView_delete(QTableView* self);