qt/gen_qtableview.nim

proc fcQTableView_override_virtual_setupViewport(self: pointer, slot: int) {.importc: "QTableView_override_virtual_setupViewport".}
proc fQTableView_virtualbase_wheelEvent(self: pointer, param1: pointer): void{.importc: "QTableView_virtualbase_wheelEvent".}
proc fcQTableView_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_wheelEvent".}
proc fQTableView_virtualbase_contextMenuEvent(self: pointer, param1: pointer): void{.importc: "QTableView_virtualbase_contextMenuEvent".}
proc fcQTableView_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_contextMenuEvent".}
proc fQTableView_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QTableView_virtualbase_changeEvent".}
proc fcQTableView_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_changeEvent".}
proc fQTableView_virtualbase_devType(self: pointer, ): cint{.importc: "QTableView_virtualbase_devType".}
proc fcQTableView_override_virtual_devType(self: pointer, slot: int) {.importc: "QTableView_override_virtual_devType".}
proc fQTableView_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QTableView_virtualbase_setVisible".}
proc fcQTableView_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QTableView_override_virtual_setVisible".}
proc fQTableView_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QTableView_virtualbase_heightForWidth".}
proc fcQTableView_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QTableView_override_virtual_heightForWidth".}
proc fQTableView_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QTableView_virtualbase_hasHeightForWidth".}
proc fcQTableView_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QTableView_override_virtual_hasHeightForWidth".}
proc fQTableView_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QTableView_virtualbase_paintEngine".}
proc fcQTableView_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QTableView_override_virtual_paintEngine".}
proc fQTableView_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_keyReleaseEvent".}
proc fcQTableView_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_keyReleaseEvent".}
proc fQTableView_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_enterEvent".}
proc fcQTableView_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_enterEvent".}
proc fQTableView_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_leaveEvent".}
proc fcQTableView_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_leaveEvent".}
proc fQTableView_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_moveEvent".}
proc fcQTableView_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_moveEvent".}
proc fQTableView_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_closeEvent".}
proc fcQTableView_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_closeEvent".}
proc fQTableView_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_tabletEvent".}
proc fcQTableView_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_tabletEvent".}
proc fQTableView_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_actionEvent".}
proc fcQTableView_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_actionEvent".}
proc fQTableView_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_showEvent".}
proc fcQTableView_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_showEvent".}
proc fQTableView_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_hideEvent".}
proc fcQTableView_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_hideEvent".}
proc fQTableView_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool{.importc: "QTableView_virtualbase_nativeEvent".}
proc fcQTableView_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_nativeEvent".}
proc fQTableView_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QTableView_virtualbase_metric".}
proc fcQTableView_override_virtual_metric(self: pointer, slot: int) {.importc: "QTableView_override_virtual_metric".}
proc fQTableView_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QTableView_virtualbase_initPainter".}
proc fcQTableView_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QTableView_override_virtual_initPainter".}
proc fQTableView_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QTableView_virtualbase_redirected".}
proc fcQTableView_override_virtual_redirected(self: pointer, slot: int) {.importc: "QTableView_override_virtual_redirected".}
proc fQTableView_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QTableView_virtualbase_sharedPainter".}
proc fcQTableView_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QTableView_override_virtual_sharedPainter".}
proc fQTableView_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_childEvent".}
proc fcQTableView_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_childEvent".}
proc fQTableView_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_customEvent".}
proc fcQTableView_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_customEvent".}
proc fQTableView_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QTableView_virtualbase_connectNotify".}
proc fcQTableView_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QTableView_override_virtual_connectNotify".}
proc fQTableView_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QTableView_virtualbase_disconnectNotify".}
proc fcQTableView_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QTableView_override_virtual_disconnectNotify".}
proc fcQTableView_staticMetaObject(): pointer {.importc: "QTableView_staticMetaObject".}
proc fcQTableView_delete(self: pointer) {.importc: "QTableView_delete".}


func init*(T: type QTableView, h: ptr cQTableView): QTableView =
  T(h: h)
proc create*(T: type QTableView, parent: gen_qwidget.QWidget): QTableView =

  QTableView.init(fcQTableView_new(parent.h))
proc create*(T: type QTableView, ): QTableView =

  QTableView.init(fcQTableView_new2())
proc metaObject*(self: QTableView, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQTableView_metaObject(self.h))

proc metacast*(self: QTableView, param1: cstring): pointer =

  fcQTableView_metacast(self.h, param1)

proc metacall*(self: QTableView, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQTableView_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QTableView, s: cstring): string =

  let v_ms = fcQTableView_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QTableView, s: cstring): string =

  let v_ms = fcQTableView_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setModel*(self: QTableView, model: gen_qabstractitemmodel.QAbstractItemModel): void =

  fcQTableView_setModel(self.h, model.h)

proc setRootIndex*(self: QTableView, index: gen_qabstractitemmodel.QModelIndex): void =

  fcQTableView_setRootIndex(self.h, index.h)

proc setSelectionModel*(self: QTableView, selectionModel: gen_qitemselectionmodel.QItemSelectionModel): void =

  fcQTableView_setSelectionModel(self.h, selectionModel.h)

proc doItemsLayout*(self: QTableView, ): void =

  fcQTableView_doItemsLayout(self.h)

proc horizontalHeader*(self: QTableView, ): gen_qheaderview.QHeaderView =

  gen_qheaderview.QHeaderView(h: fcQTableView_horizontalHeader(self.h))

proc verticalHeader*(self: QTableView, ): gen_qheaderview.QHeaderView =

  gen_qheaderview.QHeaderView(h: fcQTableView_verticalHeader(self.h))

proc setHorizontalHeader*(self: QTableView, header: gen_qheaderview.QHeaderView): void =

  fcQTableView_setHorizontalHeader(self.h, header.h)

proc setVerticalHeader*(self: QTableView, header: gen_qheaderview.QHeaderView): void =

  fcQTableView_setVerticalHeader(self.h, header.h)

proc rowViewportPosition*(self: QTableView, row: cint): cint =

  fcQTableView_rowViewportPosition(self.h, row)

proc rowAt*(self: QTableView, y: cint): cint =

  fcQTableView_rowAt(self.h, y)

proc setRowHeight*(self: QTableView, row: cint, height: cint): void =

  fcQTableView_setRowHeight(self.h, row, height)

proc rowHeight*(self: QTableView, row: cint): cint =

  fcQTableView_rowHeight(self.h, row)

proc columnViewportPosition*(self: QTableView, column: cint): cint =

  fcQTableView_columnViewportPosition(self.h, column)

proc columnAt*(self: QTableView, x: cint): cint =

  fcQTableView_columnAt(self.h, x)

proc setColumnWidth*(self: QTableView, column: cint, width: cint): void =

  fcQTableView_setColumnWidth(self.h, column, width)

proc columnWidth*(self: QTableView, column: cint): cint =

  fcQTableView_columnWidth(self.h, column)

proc isRowHidden*(self: QTableView, row: cint): bool =

  fcQTableView_isRowHidden(self.h, row)

proc setRowHidden*(self: QTableView, row: cint, hide: bool): void =

  fcQTableView_setRowHidden(self.h, row, hide)

proc isColumnHidden*(self: QTableView, column: cint): bool =

  fcQTableView_isColumnHidden(self.h, column)

proc setColumnHidden*(self: QTableView, column: cint, hide: bool): void =

  fcQTableView_setColumnHidden(self.h, column, hide)

proc setSortingEnabled*(self: QTableView, enable: bool): void =

  fcQTableView_setSortingEnabled(self.h, enable)

proc isSortingEnabled*(self: QTableView, ): bool =

  fcQTableView_isSortingEnabled(self.h)

proc showGrid*(self: QTableView, ): bool =

  fcQTableView_showGrid(self.h)

proc gridStyle*(self: QTableView, ): gen_qnamespace.PenStyle =

  gen_qnamespace.PenStyle(fcQTableView_gridStyle(self.h))

proc setGridStyle*(self: QTableView, style: gen_qnamespace.PenStyle): void =

  fcQTableView_setGridStyle(self.h, cint(style))

proc setWordWrap*(self: QTableView, on: bool): void =

  fcQTableView_setWordWrap(self.h, on)

proc wordWrap*(self: QTableView, ): bool =

  fcQTableView_wordWrap(self.h)

proc setCornerButtonEnabled*(self: QTableView, enable: bool): void =

  fcQTableView_setCornerButtonEnabled(self.h, enable)

proc isCornerButtonEnabled*(self: QTableView, ): bool =

  fcQTableView_isCornerButtonEnabled(self.h)

proc visualRect*(self: QTableView, index: gen_qabstractitemmodel.QModelIndex): gen_qrect.QRect =

  gen_qrect.QRect(h: fcQTableView_visualRect(self.h, index.h))

proc scrollTo*(self: QTableView, index: gen_qabstractitemmodel.QModelIndex, hint: gen_qabstractitemview.QAbstractItemViewScrollHint): void =

  fcQTableView_scrollTo(self.h, index.h, cint(hint))

proc indexAt*(self: QTableView, p: gen_qpoint.QPoint): gen_qabstractitemmodel.QModelIndex =

  gen_qabstractitemmodel.QModelIndex(h: fcQTableView_indexAt(self.h, p.h))
